--- a/lab_3/faq.html
+++ b/lab_3/faq.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"> <!-- Установка кодировки документа -->
-		<link rel="stylesheet" href="style.css"> <!-- Подключение внешних дополнительных файлов -->
+		<link rel="stylesheet" href="styles/main.css"> <!-- Подключение внешних дополнительных файлов -->
 		<link rel="shortcut icon" href="image_icon/icon.png" type="image/x-icon">
 		<title>SenpaiTV</title> <!-- Заголовок страницы -->
 	</head>
@@ -21,7 +21,7 @@
 			</div>
 		</header>
 		
-		<main>
+		<main class="FAQTheme">
 			<h3>Какие у вас любимые аниме? Ответ:</h3>
 			<ul>
 				<li>Форма голоса</li>
@@ -44,16 +44,15 @@
 		
 		<footer>
 			<div class="contact">
-				<h5>Свяжитесь с нами</h5>
-				<p>SenpaiTV</p>
-				<p>ул. Вахитова 27</p>
-				<p>Татарстан, Наб. Челны 28801</p>
+				<h4>Свяжитесь с нами</h4>
+				<span class="clear">SenpaiTV</span>
+				<span class="clear">ул. Вахитова 27</span>
+				<span class="clear">Татарстан, Наб. Челны 28801</span>
 			</div>
 			<div class="siteMap">
-				<h5>Карта сайта</h5>
+				<h4>Карта сайта</h4>
 				<ul>
 					<li><a href="main.html">Домой</a></li>
-					<li><a href="">О нас</a></li>
 					<li><a href="">Техподдержка</a></li>
 					<li><a href="faq.html">FAQ</a></li>
 				</ul>
