--- a/lab_3/main.html
+++ b/lab_3/main.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8"> <!-- Установка кодировки документа -->
-		<link rel="stylesheet" href="style.css"> <!-- Подключение внешних дополнительных файлов -->
-		<link rel="shortcut icon" href="image_icon/icon.png" type="image/x-icon">
+		<link rel="stylesheet" href="styles/main.css"> <!-- Подключение внешних дополнительных файлов -->
+		<link rel="shortcut icon" href="img/icon_power.jpg" type="image/x-icon">
 		<title>SenpaiTV</title> <!-- Заголовок страницы -->
 	</head>
 	<body>
@@ -21,31 +21,46 @@
 			</div>
 		</header>
 		
-		<main>
-			<h2>SenpaiTV - лучший сайт с расписанием аниме</h2>
-			<p>Ну, тут типо есть текст, который должен быть со смыслом, но тут будет просто текст, чтобы он был, ведь это шаблон пока что, а вот когда уже будет что-то годное, тогда и текст нормальный появится o_0</p>
-			<h3>Спросите почему именно аниме? - Ответ прост:</h3>
-			<ul>
-				<li>Аниме очень инетерсно смотреть</li>
-				<li>В аниме очень много жанров, начиная от романтики и заканчивая боевиками, фентези и исекаями</li>
-				<li>Да и просто а почему бы и нет</li>
-			</ul>
-			<h3>Картинка лучшей аниме-девочки:</h3>
-			<img src="C:\Users\dimag\OneDrive\Рабочий стол\Павер красотка.jpg" width="300px" height="300px" />
+		<main class="mainTheme">
+			<div class="centerInfo">
+				<h2>Мы рады вам и приветствуем вас на нашем замечательном сайте!</h2>
+				<div class="videoInMainPage">
+					<video src="D:\web\lab_3\video\vidos.mp4" controls loop>
+					
+					</video>
+				</div>
+				<div class="logOrRegRefBlock">
+					<button class="btn" type="button">Войти</button>
+					<button class="btn" type="button">Регистрация</button>
+				</div>
+			</div>
+			<div class="rightInfo">
+				<div class="mainLogo">
+					<img src="C:\Users\dimag\OneDrive\Рабочий стол\Павер красотка.jpg" width="300px" height="300px" />
+				</div>
+				<div class="mainLogoInfo">
+					<span>
+						<b>SenpaiTV</b> специально создавался, чтобы любители аниме-сериалов смогли узнать расписание своих любимых тайтлов на разных телеканалах.
+					</span>
+					<br />
+					<span>
+						Вы можете как посмотреть расписание аниме-сериалов, так и посмотреть наши индивидуальные топы по категориям, аниме-сериалы из которых смогут вас заинтересовать.
+					</span>
+				</div>
+			</div>
 		</main>
 		
 		<footer>
 			<div class="contact">
-				<h5>Свяжитесь с нами</h5>
-				<p>SenpaiTV</p>
-				<p>ул. Вахитова 27</p>
-				<p>Татарстан, Наб. Челны 28801</p>
+				<h4>Свяжитесь с нами</h4>
+				<span class="clear">SenpaiTV</span>
+				<span class="clear">ул. Вахитова 27</span>
+				<span class="clear">Татарстан, Наб. Челны 28801</span>
 			</div>
 			<div class="siteMap">
-				<h5>Карта сайта</h5>
+				<h4>Карта сайта</h4>
 				<ul>
 					<li><a href="">Домой</a></li>
-					<li><a href="">О нас</a></li>
 					<li><a href="">Техподдержка</a></li>
 					<li><a href="faq.html">FAQ</a></li>
 				</ul>
