--- a/lab_3/faq.html
+++ b/lab_3/faq.html
@@ -4,12 +4,12 @@
 		<meta charset="utf-8"> <!-- Установка кодировки документа -->
 		<link rel="stylesheet" href="styles/main.css"> <!-- Подключение внешних дополнительных файлов -->
 		<link rel="shortcut icon" href="image_icon/icon.png" type="image/x-icon">
-		<title>SenpaiTV</title> <!-- Заголовок страницы -->
+		<title>DoViTV</title> <!-- Заголовок страницы -->
 	</head>
 	<body>
 		<header>
 			<div class="footerSiteName">
-				<h1>SenpaiTV</h1>
+				<h1>DoViTV</h1>
 			</div>
 			<div class="footerNavigation">
 				<nav>
