--- a/newDir/TNT_info.html
+++ b/newDir/TNT_info.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"> <!-- Установка кодировки документа -->
-		<link rel="shortcut icon" href="image_icon/tnt_icon.jpg" type="image/x-icon">
+		<link rel="shortcut icon" href="image_icon/tnt_icon.jpg" type="image/x-icon"> <!-- Установка логотипа страницы, ссылка на картинку в атрибуте href -->
 		<title>ТНТ_инфо</title> <!-- Заголовок страницы -->
 	</head>
 	<body>
@@ -11,6 +11,7 @@
 				<tr>
 					<th>Название передачи</th><th>Время</th><th>Превью сериала</th>
 				</tr>
+				<!-- Тут все тоже самое, что и на предыдущем скрине, только для того, чтобы вставить картинку в таблицу, надо использовать тэг img, а также в атрибуте src нужно указать путь к картинке -->
 				<tr>
 					<td>СашаТаня</td><td>8:00-10:00</td><td><img width="180px" height="100px" src="D:\web\newDir\image_icon\sasha.jpg"></td>
 				</tr>
