--- a/newDir/index.html
+++ b/newDir/index.html
@@ -2,15 +2,19 @@
 <html>
 	<head>
 		<meta charset="utf-8"> <!-- Установка кодировки документа -->
-		<link rel="shortcut icon" href="image_icon/icon.png" type="image/x-icon">
+		<link rel="shortcut icon" href="image_icon/icon.png" type="image/x-icon"> <!-- Установка логотипа страницы, ссылка на картинку находится в атрибуте href -->
 		<title>Лаб. 1_2</title> <!-- Заголовок страницы -->
 	</head>
 	<body>
-		<table width="100%" border="1" cellpadding="4" cellspacing="0">
-			<caption>Телеканалы</caption>
+		<table width="100%" border="1" cellpadding="4" cellspacing="0"> <!-- Описание таблицы -->
+			<!-- width - ширина таблицы, border - толщина таблицы в пикселях, cellpadding - внутренний отступ в таблице, cellspacing - сама поймешь, если поменяешь значение -->
+			<caption>Телеканалы</caption> <!-- Заголовок таблицы -->
+				<!-- tr - тэг для создания строки, th - тэг для создания заголовочного столбцы таблицы -->
 				<tr>
 					<th>Название канала</th><th>Описание канала</th><th>Ссылка на более подробную информацию</th>
 				</tr>
+				<!-- tr - тэг для создания строки, td - тэг для создания столбца -->
+				<!-- a - тэг, который текст делает ссылкой, href - ссылка на другую html страницу -->
 				<tr>
 					<td>СТС</td><td>Семейный канал с множеством интерессных сериалов</td><td><a href="D:/web/newDir/STS_info.html">СТС_инфо</a></td>
 				</tr>
