--- a/lab_3/main.html
+++ b/lab_3/main.html
@@ -4,12 +4,12 @@
 		<meta charset="utf-8"> <!-- Установка кодировки документа -->
 		<link rel="stylesheet" href="styles/main.css"> <!-- Подключение внешних дополнительных файлов -->
 		<link rel="shortcut icon" href="img/icon_power.jpg" type="image/x-icon">
-		<title>SenpaiTV</title> <!-- Заголовок страницы -->
+		<title>DoViTV</title> <!-- Заголовок страницы -->
 	</head>
-	<body>
+	<body onload="loadBody()">
 		<header>
 			<div class="footerSiteName">
-				<h1>SenpaiTV</h1>
+				<h1>DoViTV</h1>
 			</div>
 			<div class="footerNavigation">
 				<nav>
@@ -25,9 +25,16 @@
 			<div class="centerInfo">
 				<h2>Мы рады вам и приветствуем вас на нашем замечательном сайте!</h2>
 				<div class="videoInMainPage">
-					<video src="D:\web\lab_3\video\vidos.mp4" controls loop>
-					
-					</video>
+					<div class="container">
+						<div class="tabs">
+							<a><span class="mainSectionPannel">Новые</span></a>
+							<a><span class="mainSectionPannel">Старые</span></a>
+							<a><span class="mainSectionPannel">Добавить</span></a>
+						</div>
+						<div id="contentPannel" class="content">
+							
+						</div>
+					</div>
 				</div>
 				<div class="logOrRegRefBlock">
 					<button class="btn" type="button">Войти</button>
@@ -66,5 +73,12 @@
 				</ul>
 			</div>
 		</footer>
+		
+		<script type="text/javascript" src="functions/main.js"></script>
+		<script
+			src="https://code.jquery.com/jquery-3.6.3.js"
+			integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
+			crossorigin="anonymous">
+		</script>
 	</body>
 </html>
