--- a/part7/Client/faq.html
+++ b/part7/Client/faq.html
@@ -14,9 +14,9 @@
 			<div class="footerNavigation">
 				<nav>
 					<a href="">Войти</a> |
-					<a href="">Регистрация</a> |
+					<a href="main.html">Регистрация</a> |
 					<a href="faq.html">FAQ</a> |
-					<a href="pictureShow.html">Поддержка</a>
+					<a href="">Поддержка</a>
 				</nav>
 			</div>
 		</header>
@@ -52,7 +52,7 @@
 			<div class="siteMap">
 				<h4>Карта сайта</h4>
 				<ul>
-					<li><a href="main.html">Домой</a></li>
+					<li><a href="list.html">Домой</a></li>
 					<li><a href="">Техподдержка</a></li>
 					<li><a href="faq.html">FAQ</a></li>
 				</ul>
