--- a/part7/Client/list.html
+++ b/part7/Client/list.html
@@ -65,6 +65,6 @@
 		</footer>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-		<script type="text/javascript" src="http://localhost:3000/functions/users.js"></script>
+		<script type="text/javascript" src="http://localhost:3000/functions/main.js"></script>
 	</body>
 </html>
